@@ -1,22 +1,23 @@
 package com.piggymetrics.statistics.service;
 
-import com.google.common.collect.ImmutableMap;
 import com.piggymetrics.statistics.client.ExchangeRatesClient;
 import com.piggymetrics.statistics.domain.Currency;
 import com.piggymetrics.statistics.domain.ExchangeRatesContainer;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.util.Map;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.*;
-import static org.mockito.MockitoAnnotations.initMocks;
 
+@ExtendWith(MockitoExtension.class)
 public class ExchangeRatesServiceImplTest {
 
 	@InjectMocks
@@ -25,16 +26,11 @@ public class ExchangeRatesServiceImplTest {
 	@Mock
 	private ExchangeRatesClient client;
 
-	@Before
-	public void setup() {
-		initMocks(this);
-	}
-
 	@Test
 	public void shouldReturnCurrentRatesWhenContainerIsEmptySoFar() {
 
 		ExchangeRatesContainer container = new ExchangeRatesContainer();
-		container.setRates(ImmutableMap.of(
+		container.setRates(Map.of(
 				Currency.EUR.name(), new BigDecimal("0.8"),
 				Currency.RUB.name(), new BigDecimal("80")
 		));
@@ -53,7 +49,7 @@ public class ExchangeRatesServiceImplTest {
 	public void shouldNotRequestRatesWhenTodaysContainerAlreadyExists() {
 
 		ExchangeRatesContainer container = new ExchangeRatesContainer();
-		container.setRates(ImmutableMap.of(
+		container.setRates(Map.of(
 				Currency.EUR.name(), new BigDecimal("0.8"),
 				Currency.RUB.name(), new BigDecimal("80")
 		));
@@ -73,7 +69,7 @@ public class ExchangeRatesServiceImplTest {
 	public void shouldConvertCurrency() {
 
 		ExchangeRatesContainer container = new ExchangeRatesContainer();
-		container.setRates(ImmutableMap.of(
+		container.setRates(Map.of(
 				Currency.EUR.name(), new BigDecimal("0.8"),
 				Currency.RUB.name(), new BigDecimal("80")
 		));
@@ -88,8 +84,10 @@ public class ExchangeRatesServiceImplTest {
 		assertTrue(expectedConvertionResult.compareTo(result) == 0);
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void shouldFailToConvertWhenAmountIsNull() {
-		ratesService.convert(Currency.EUR, Currency.RUB, null);
+		assertThrows(IllegalArgumentException.class, () -> {
+			ratesService.convert(Currency.EUR, Currency.RUB, null);
+		});
 	}
 }
